testing/blue-green-deploy/auto/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-preview
  namespace: team-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: app
